2001-05-30  Johan Dahlin  <zilch.am@home.se>

	* bonobo/bonobo-ui-toolbar-item.h: Removed duplicate prototypes.
	
2001-05-30  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to $ALL_LINGUAS

2001-05-25  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-ui-engine-config.c (dialog_new),
	bonobo/bonobo-selector.c (bonobo_selector_construct):
	GTK_STOCK_BUTTON_OK -> GTK_STOCK_OK

2001-05-19  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-plug.[ch]: Derive from GtkPlug.
	* bonobo/bonobo-socket.[ch]: Derive from GtkSocket.

	* bonobo/bonobo-control.c (process_events): Use g_main_context_pending()
	and g_main_context_iteration() instead of gtk_events_pending() and
	gtk_main_iteration().

2001-05-06  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(set_control_property_bag_value): Use the new bonobo_pbclient_set_value().

2001-05-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-embeddable.c (impl_Bonobo_Embeddable_advise),
	(impl_Bonobo_Embeddable_unadvise): kill.
	(bonobo_embeddable_class_init): upd.

	* changes.txt: add to document changes

	* bonobo/Makefile.am: remove bonobo-desktop.[ch]

	* bonobo/bonobo-desktop.[ch]: remove.

2001-05-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-widget.c (bonobo_widget_launch_component),
	(bonobo_widget_get_objref): kill BonoboObjectClient

	* bonobo/bonobo-client-site.c (bonobo_client_site_bind_embeddable),
	(bonobo_client_site_get_embeddable): kill BonoboObjectClient.

2001-05-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_set_container),
	(bonobo_ui_component_unset_container, impl_set_prop),
	(bonobo_ui_component_add_verb_list_with_data):  kill theoretical
	re-enterancy issues.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-control.[ch]: Use GObject, not GtkObject.
	* bonobo/bonobo-control-frame.[ch]: Likewise.
	* bonobo/bonobo-ui-component.[ch]: Likewise.
	* bonobo/bonobo-ui-container.[ch]: Likewise.
